--- a/app/src/at-nguyenha/res/layout/fragment_add_new_feed.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_add_new_feed.xml
@@ -1,61 +1,112 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:background="@android:color/white"
     tools:context="asiantech.internship.summer.retrofit.fragment.AddNewFeedFragment">
 
+    <TextView
+        android:textColor="@color/colorText"
+        android:id="@+id/tvTitleAddNewFeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:text="@string/textview_text_add_newfeed"
+        android:textSize="28sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
+        android:textColorHint="@color/colorText"
         android:id="@+id/edtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/layout_marginleft_20dp"
-        android:layout_marginRight="@dimen/layout_marginright_20dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/rounded_border_edittext"
         android:hint="@string/edittext_text_name"
         android:inputType="text"
+        android:padding="10dp"
         android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTitleAddNewFeed"
         tools:ignore="Autofill,LabelFor" />
 
     <EditText
+        android:textColorHint="@color/colorText"
         android:id="@+id/edtStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:layout_marginLeft="@dimen/layout_marginleft_20dp"
         android:layout_marginRight="@dimen/layout_marginright_20dp"
+        android:background="@drawable/rounded_border_edittext"
         android:hint="@string/edittext_text_status"
         android:inputType="text"
+        android:padding="10dp"
         android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtName"
         tools:ignore="Autofill,LabelFor" />
 
     <EditText
-
+        android:textColorHint="@color/colorText"
         android:id="@+id/edtFoodName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/layout_marginleft_20dp"
-        android:layout_marginRight="@dimen/layout_marginright_20dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/rounded_border_edittext"
         android:hint="@string/edittext_text_food_name"
         android:inputType="text"
+        android:padding="10dp"
         android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtStatus"
         tools:ignore="Autofill,LabelFor" />
 
     <EditText
+        android:textColorHint="@color/colorText"
         android:id="@+id/edtImageUrl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/layout_marginleft_20dp"
-        android:layout_marginRight="@dimen/layout_marginright_20dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/rounded_border_edittext"
         android:hint="@string/edittext_text_image"
         android:inputType="textUri"
+        android:padding="10dp"
         android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtFoodName"
         tools:ignore="Autofill,LabelFor" />
 
-    <Button
-        android:id="@+id/btnAddNewFeed"
-        android:layout_width="wrap_content"
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_text_add"/>
+        app:cardCornerRadius="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edtImageUrl">
+
+        <Button
+            android:id="@+id/btnAddNewFeed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/textview_color_account"
+            android:text="@string/button_text_add"
+            android:textColor="@android:color/white" />
+
+    </androidx.cardview.widget.CardView>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
